--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,12 @@
 .container{
-    width: 90%;
+    width: 100%;
     max-width: 1200px;
     margin: auto;
     padding: 10px 0;
 
     display: grid;
     grid-template-columns: 1fr;
+    
 }
 
 .headerP{
@@ -76,6 +77,7 @@
 .container-nav{
     background-color: rgb(250, 235, 22);
     
+    
 }
 #item{
     color: rgb(235, 33, 33);
@@ -94,9 +96,13 @@
 
 
 .section_princi{
+    width: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     /*repeat(3, 1fr)*/
+    padding: 1em;
+    font-size: 1.2rem;
+    
     
 }
 
@@ -119,107 +125,4 @@
     gap: 25px;
     justify-content: center;
     padding: 1%;
-    
-   
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* 
-
-body{
-   background-color: rgb(241, 237, 245); 
-   color: rgb(15, 15, 15);
-   font-family: 'Times New Roman', Times, serif;
-   margin: 0;
-   padding: 0;
-}
-
-
-header{
-    background-color: rgb(250, 249, 243);
-    padding: 10px;
-    display: flex;
-    flex-direction: row;   
-        
-}
-header a{
-    color: rgb(19, 20, 20);
-    padding: 3px 20px;
-    text-decoration: none;
-}
-
-img {
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 5px;
-    width: 30px;
-  }
-
-nav{
-    background-color: rgb(240, 181, 19);
-    padding: 10px;
-    display: flex;
-    flex-direction: row;
-}
-
-nav a{
-    color: rgb(3, 3, 3);
-    padding: 10px 20px;
-    text-decoration:none;
-    width: 100%;
-    flex-direction: row;
-}
-
-.imagen{
-    display: flex;
-    padding: 10px;
-    width: 80px;
-}
-
-.row{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-section{
-    background-color: rgb(192, 212, 212);
-    flex: 40%;
-    padding: 10px;
-}
-
-article{
-    background-color: rgb(182, 202, 202);
-    flex:30%;
-    padding: 10px;
-}
-aside{
-    background-color: rgb(171, 184, 184);
-    flex:30%;
-    padding: 10px;
-}
-
-.ubicacion{
-    background-color: rgb(208, 191, 224);
-    
-}
-
-footer{
-    background-color: rgb(149, 149, 153);
-    text-align: center;
-    padding: 5px;;
-}
- */
