--- a/src/stylesPlinea.css
+++ b/src/stylesPlinea.css
@@ -1,7 +1,39 @@
-.menu-linea{
-    width: 80%;
-    margin: 10px auto;
-    border-radius: 1px;
-    border: 1px solid black;
+.modPedido{
+    padding: 2em 0em 0.1em 0em;
+    
+}
 
+.encabezado{
+    font-family: 'Belanosima', sans-serif;
+    width: 60%;
+    height: auto;
+    background-color:#f13924;
+    margin: 0 auto;
+    text-align: center;
+    padding: 0.5em ;
+    border-radius: 0.3em;
+        
+}
+
+
+.caj_opcion{
+    width: 60%;
+    height: auto;
+    background-color: rgb(243, 237, 237);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 4em;
+    margin: auto;
+    
+    
+    
+}
+
+.classImages{
+    width: 50%;
+    border-radius: 1em;
+    justify-self: center;
+    align-self: center;
+    
+    
 }
